87-AG Fixed footer overlapping how we do it component; added footer component to landing page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: #FF7070;
     height: 200px;
-    position: absolute;
+    position: relative;
     bottom: 0;
     margin: 0;
     left: 0;
